src/test/ui/compare-method/proj-outlives-region.stderr
error[E0276]: impl has stricter requirements than trait
  --> $DIR/proj-outlives-region.rs:21:5
   |
16 |     fn foo() where T: 'a;
   |     --------------------- definition of `foo` from trait
...
21 |     fn foo() where U: 'a { } //~ ERROR E0276
   |     ^^^^^^^^^^^^^^^^^^^^^^^^ impl has extra requirement `U: 'a`

error: aborting due to previous error

